kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster
  namespace: <YOUR_NAMESPACE>
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 40510
      targetPort: 40510
      # The below line isn't required.
      # protocol: TCP
